name:               trabalho-beta
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          trabalho-beta
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    Home
                    Handlers.Carro
                    Handlers.Cliente
                    Handlers.Funcionario
                    Handlers.Locacao
                    Handlers.Login
                  
  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-static 
                , text                          
                , persistent                    
                , persistent-postgresql
                , aeson
                , monad-logger
                , shakespeare

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
